--- a/public/index.html
+++ b/public/index.html
@@ -604,7 +604,7 @@ footer .logo h1 {
         </p>
         <div class="b1">
           <div class="s1">
-            <a href="./dashboard" id="p4">Start Now</a>
+            <a href="./register" id="p4">Start Now</a>
           </div>
           <div class="s2">
             <a href="/chatbot" id="p5">💬 Chat with LearnBot</a>
