--- a/public/index.html
+++ b/public/index.html
@@ -597,7 +597,7 @@ footer .logo h1 {
   <main>
     <div class="content">
       <div class="text">
-        <p id="p1">Very proud to introduce</p>
+        <p id="p1">It's time to</p>
         <p id="p2" class="slide">Unlock Your Potential Step-by-Step</p>
         <p id="p3">
           StudySync is an interactive platform that helps users track their learning progress, set personalized goals, earn achievement badges, and stay motivated by visualizing milestones and accomplishments throughout their educational journey. It encourages consistent learning and skill development.
@@ -633,9 +633,8 @@ footer .logo h1 {
         <div class="head">
           <h3>Our Competitive Advantage</h3>
           <p id="p0">
-            This is a section of some simple filler text, also known as placeholder
-            text. It shares some characteristics of real written text but is random
-            or otherwise generated.
+            At StudySync, we combine smart technology with accessible learning tools to
+            deliver personalized, affordable, and engaging education for every student.
           </p>
         </div>
         <div class="cards">
